testsuite/tests/ghc-regress/rename/should_fail/rnfail056.hs
-- TupleSections not enabled

module Foo where

foo = (1,)
